[gd_scene load_steps=8 format=2]

[ext_resource path="res://Background.gd" type="Script" id=1]
[ext_resource path="res://fonts/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://SettingsControl.gd" type="Script" id=3]
[ext_resource path="res://Settings.gd" type="Script" id=4]
[ext_resource path="res://audio/intro.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[node name="SettingsControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
Settings = ExtResource( 4 )

[node name="Background" type="Node2D" parent="."]
z_index = -10
script = ExtResource( 1 )

[node name="Title" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -131.0
margin_right = 131.0
margin_bottom = 84.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -147.774
margin_top = -105.225
margin_right = 148.226
margin_bottom = -37.2251
custom_fonts/font = SubResource( 3 )
text = "Save & Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true

[node name="Fullscreen" type="CheckBox" parent="."]
margin_left = 537.481
margin_top = 165.145
margin_right = 728.481
margin_bottom = 249.145
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Width" type="SpinBox" parent="."]
margin_left = 521.031
margin_top = 269.881
margin_right = 629.031
margin_bottom = 293.881
rect_scale = Vector2( 3, 3 )
min_value = 4.0
max_value = 15.0
value = 4.0
prefix = "Width:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Height" type="SpinBox" parent="."]
margin_left = 522.291
margin_top = 353.471
margin_right = 630.291
margin_bottom = 377.471
rect_scale = Vector2( 3, 3 )
min_value = 4.0
max_value = 15.0
value = 4.0
prefix = "Height:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cheeses" type="SpinBox" parent="."]
margin_left = 524.031
margin_top = 437.652
margin_right = 631.031
margin_bottom = 461.652
rect_scale = Vector2( 3, 3 )
min_value = 1.0
max_value = 10.0
value = 4.0
prefix = "Cheeses:"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="value_changed" from="Width" to="." method="_on_Width_changed"]
[connection signal="value_changed" from="Height" to="." method="_on_Height_changed"]
[connection signal="value_changed" from="Cheeses" to="." method="_on_Cheeses_changed"]
